--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Stefanee Richardson</h1>
     <br>
 
-    <body>
+
       <!-- The closing tag for the hi was an h2-->
         <h2>Placeholder for two paragraphs that will have text describing who you are</h2>
 
@@ -25,5 +25,5 @@
       <li>Enjoys traveling the world.</li>
       </ul>
   
-
+</body>
 </html>
